[project]
name = "python-async"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eschmidt42", email = "11818904+eschmidt42@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.2.0",
    "pyleak>=0.1.14",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
